# sdlunzip

./: LICENSE  README.md  pyproject.toml
src/sdlunzip/: __init__.py  api.py  exceptions.py  main.py  status_codes.py
tests/: test_sdlunzip.py
tests/data/: SystemDebugLog.html
tests/data/ipmi_log_3/: SystemBMCDebugLog.zip.encrypted
