[tool.poetry]
name = "sdlunzip"
version = "0.2.1"
description = ""
authors = ["Roger Hurwitz <rogerhurwitz@inspirsmith.com>"]
readme = "README.md"
packages = [{include = "sdlunzip", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
